# qde2024fp

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
docker-compose/: app.yaml
src/dags/: fill_datamart.py  ingest_chembl.py  morgan_fingerprints.py  tanimoto_similarity.py
src/dags/utils/: alchemy_tables.py  calculations.py  telegram_notifier.py
